--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,20 @@
-torch==1.9.0
-torchvision==0.10
+chemprice
+hdbscan
+hydra-core
+keras
+matplotlib
+networkx
 pandas==1.3.5
-requests==2.28.1
-tqdm==4.65.0
+rdchiral==1.1.0
 rdkit==2022.3.3
+requests==2.28.1
 scikit-learn
 scipy
-rdchiral==1.1.0
-hydra-core
-hdbscan
-matplotlib
 seaborn
-keras
-chemprice
-tensorflow
+shutil
 swifter
-networkx
+tensorflow
+torch==1.9.0
+torchvision==0.10
+tqdm==4.65.0
+zipfile
